--- a/php_project/update/index.html
+++ b/php_project/update/index.html
@@ -232,7 +232,7 @@
 		console.log(timer); 
 
 		if(timer == 0){
-			window.location.href = "graphic_designing_portfolio/";
+			window.location.href = "graphic_designing_portfolio/index.php";
 		}
 	}, 1000);
 } ());
